--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   <img src="img/fiesc-senai.png">
 
   <div class="container">
-    <h1 class="login--welcome-back">Login no SENAI 5S!</h1>
 
     <form class="form-login">
-      <input type="text" name="email" placeholder="Seu e-mail" />
-      <input type="text" name="password" placeholder="Sua senha" />
+      <input type="text" placeholder="Seu e-mail" />
+      <input type="text" placeholder="Sua senha" />
       <input type="submit" id="login" value="Entrar" />
     </form>                                                                                                    
   </div>
