ajuste no layout

--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
 
 <div class="content-wrapper">
   
-  <img src="img/fiesc-senai.png">
+  <img class="logo-fiesc" src="img/fiesc-senai.png">
 
   <div class="container">
 
     <form class="form-login">
       <input type="text" placeholder="Seu e-mail" />
       <input type="text" placeholder="Sua senha" />
+      
+      
       <input type="submit" id="login" value="Entrar" />
+
+      <div class="form-link">
+        <a href="#" class="form-forget-password">Esqueci minha senha</a>
+      </div>
+
     </form>                                                                                                    
   </div>
 
