inserido o padrão BEM css

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<div class="content-wrapper">
+<div class="container-main">
   
-  <img class="logo-fiesc" src="img/fiesc-senai.png">
+  <div class="container-logo">
+    <img class="container-logo--img" src="img/fiesc-senai.png">
+  </div>
 
-  <div class="container">
+  <div class="form-login">
 
-    <form class="form-login">
-      <input type="text" placeholder="Seu e-mail" />
-      <input type="text" placeholder="Sua senha" />
-      
-      
-      <input type="submit" id="login" value="Entrar" />
+    <form>
+      <input type="text" class="form-login--text" placeholder="Seu e-mail" />
+      <input type="text" class="form-login--text" placeholder="Sua senha" />
+      <input type="submit" class="form-login--submit" value="Entrar" />
 
-      <div class="form-link">
-        <a href="#" class="form-forget-password">Esqueci minha senha</a>
+      <div class="form-forget">
+        <a href="#" class="form-forget--link-color">Esqueci minha senha</a>
       </div>
 
     </form>                                                                                                    
