pagina de recuperação de senha e ajustes layout

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" href="index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <div class="container-main">
@@ -10,14 +11,14 @@
   </div>
 
   <div class="form-login">
-
+    <h3>Faça o login para continuar</h3>
     <form>
       <input type="text" class="form-login--text" placeholder="Seu e-mail" />
       <input type="text" class="form-login--text" placeholder="Sua senha" />
       <input type="submit" class="form-login--submit" value="Entrar" />
 
       <div class="form-forget">
-        <a href="#" class="form-forget--link-color">Esqueci minha senha</a>
+        <a href="forget-password.html" class="form-forget--link-color">Esqueci minha senha</a>
       </div>
 
     </form>                                                                                                    
